<resources>
    <string name="app_name">BankApp</string>
    <string name="user_name">User Name...</string>
    <string name="password">Password</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="todo">image_of_logo</string>
    <string name="login">Login</string>
    <string name="go_to_login">go_to_login</string>
    <string name="err_password">err_password</string>
    <string name="err_usernsme">err_usernsme</string>
    <string name="err_Login">err_Login</string>
</resources>